@@ -1,5 +1,6 @@
 2.0.0b10
  - fix: fluorescence label for y axis not updated with custom value
+ - fix: fluorescence label of colorbar not updated with custom value 
 2.0.0b9
  - try to figure out #29
 2.0.0b8
